     level rollback occurred.  This event
     is specifically designed to allow operations
     with the Session to proceed after a rollback
     when the Session.is_active is True.
     [ticket:2241]

- sqlite
  - Ensured that the same ValueError is raised for
    illegal date/time/datetime string parsed from
    the database regardless of whether C 
    extensions are in use or not.

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

0.7.2
=====
- orm
  - Feature enhancement: joined and subquery
    loading will now traverse already-present related
    objects and collections in search of unpopulated
    attributes throughout the scope of the eager load
    being defined, so that the eager loading that is
    specified via mappings or query options
    unconditionally takes place for the full depth,
    populating whatever is not already populated.
    Previously, this traversal would stop if a related
    object or collection were already present leading
    to inconsistent behavior (though would save on
    loads/cycles for an already-loaded graph). For a
    subqueryload, this means that the additional
    SELECT statements emitted by subqueryload will
    invoke unconditionally, no matter how much of the
    existing graph is already present (hence the
    controversy). The previous behavior of "stopping"
    is still in effect when a query is the result of
    an attribute-initiated lazyload, as otherwise an
    "N+1" style of collection iteration can become
    needlessly expensive when the same related object
    is encountered repeatedly. There's also an 
    as-yet-not-public generative Query method 
    _with_invoke_all_eagers()
    which selects old/new behavior [ticket:2213]

  - A rework of "replacement traversal" within
    the ORM as it alters selectables to be against
    aliases of things (i.e. clause adaption) includes 